--- a/pynuts/templates/_pynuts/create.jinja2
+++ b/pynuts/templates/_pynuts/create.jinja2
@@ -1,5 +1,5 @@
 <form {% if action %} action="{{ action }}" {% endif %} method="post" enctype="multipart/form-data">
-  {%- for field in view.create_form %}
+  {%- for field in view.create_fields %}
     {%- if field.widget.input_type != 'hidden' -%}
       {%- if field.errors -%}
         {{ field.label(class="error", title=', '.join(field.errors)) }}
