--- a/pynuts/templates/_pynuts/table.jinja2
+++ b/pynuts/templates/_pynuts/table.jinja2
@@ -1,61 +1,56 @@
 {% showonmatch 'tr td' %}
   <table>
-    <thead>
+    {%- for view in views %}
+      {% if loop.first %}
+        <thead>
+          <tr>
+            {%- for field in view.table_fields %}
+              <th>{{ field.label.text }}</th>
+            {% endfor -%}
+            {%- if not no_default_actions %}
+              {%- if view.read_endpoint %}
+                <th>View</th>
+              {%- endif %}
+              {%- if view.update_endpoint %}
+                <th>Edit</th>
+              {%- endif %}
+              {%- if view.delete_endpoint %}
+                <th>Delete</th>
+              {% endif -%}
+            {% endif -%}
+            {% for action in actions %}
+              <th>{{ action.title or action.label }}</th>
+            {% endfor %}
+          </tr>
+        </thead>
+        <tbody>
+      {% endif %}
       <tr>
-        {%- for field_name in view_class.table_columns %}
-          {%- if field_name != 'csrf_token' %}
-            <th>{{ view_class.table_fields[field_name].label.text }}</th>
-          {%- endif -%}
-        {% endfor -%}
+        {%- for column in view_class.table_columns %}
+          <td>
+            {{ view.table_form[column] | data }}
+          </td>
+        {%- endfor %}
         {%- if not no_default_actions %}
-          {%- if view_class.update_endpoint %}
-            <th>Edit</th>
+          {%- if view.read_endpoint %}
+            <td><a href="{{ view.action_url_for('read', **(ctx_args or {})) }}">View</a></td>
           {%- endif %}
-          {%- if view_class.delete_endpoint %}
-            <th>Delete</th>
-          {% endif -%}
-        {% endif -%}
+          {%- if view.update_endpoint %}
+            <td><a href="{{ view.action_url_for('update', **(ctx_args or {})) }}">Edit</a></td>
+          {%- endif %}
+          {%- if view.delete_endpoint %}
+            <td><a href="{{ view.action_url_for('delete', **(ctx_args or {})) }}">Delete</a></td>
+          {%- endif %}
+        {% endif %}
         {% for action in actions %}
-          <th>{{ action.title or action.label }}</th>
+          {# Update the dict in line with `or` hack #}
+          <td><a href="{{ action.data.update(view.primary_keys) or action.data.update(ctx_args or {}) or url_for(action.endpoint, **action.data) }}">{{ action.label }}</a></td>
         {% endfor %}
       </tr>
-    </thead>
-    <tbody>
-      {%- for view in views %}
-        <tr>
-          {% set form = view.TableForm(obj=view.data, formdata=None) %}
-          {%- for column in view_class.table_columns %}
-            <td>
-              {%- if loop.index == 1 -%}
-                {%- if endpoint -%}
-                  <a href="{{ endpoint(view=view, **(ctx_args or {})) }}">
-                {%- elif view.read_endpoint -%}
-                  <a href="{{ view.action_url_for('read', **(ctx_args or {})) }}">
-                {%- endif -%}
-                {{ form[column] | data }}
-                {%- if endpoint or view.read_endpoint -%}
-                  </a>
-                {%- endif -%}
-              {%- else -%}
-                {{ form[column] | data }}
-              {%- endif -%}
-            </td>
-          {%- endfor %}
-          {%- if not no_default_actions %}
-            {%- if view.update_endpoint %}
-              <td><a href="{{ view.action_url_for('update', **(ctx_args or {})) }}">></a></td>
-            {%- endif %}
-            {%- if view.delete_endpoint %}
-              <td><a href="{{ view.action_url_for('delete', **(ctx_args or {})) }}">x</a></td>
-            {%- endif %}
-          {% endif %}
-          {% for action in actions %}
-            {# Update the dict in line with `or` hack #}
-            <td><a href="{{ action.data.update(view.primary_keys) or action.data.update(ctx_args or {}) or url_for(action.endpoint, **action.data) }}">{{ action.label }}</a></td>
-          {% endfor %}
-        </tr>
-      {%- endfor %}
-    </tbody>
+      {% if loop.last %}
+        </tbody>
+      {% endif %}
+    {%- endfor %}
   </table>
 {%- else -%}
   {%- if no_result_message %}
