Fix inconsistency with url_for

--- a/docs/example/complete/templates/list.jinja2
+++ b/docs/example/complete/templates/list.jinja2
@@ -2,7 +2,7 @@
 <ul>
   {% for company in view_class.model.query.all() %}
     <li>
-      <a href="{{ view_class(company.company_id).template_url_for(url_for('test_endpoint', company_id=company.company_id)) }}">{{ company.name }}</a>
+      <a href="{{ url_for('test_endpoint', company_id=company.company_id) }}">{{ company.name }}</a>
     </li>
   {% endfor %}
 </ul>
